# edTech

./: .gitignore
database/: 001_initial_schema.sql  002_seed_data.sql  README.md
infra/compose/: docker-compose.yml
infra/docker/: Dockerfile
services/cpp_core/: CMakeLists.txt  main.cpp
services/cpp_core/include/config/: AppConfig.hpp
services/cpp_core/include/controller/: AuthController.hpp  HealthController.hpp  TestController.hpp  UserController.hpp
services/cpp_core/include/database/: AnswerOptionDb.hpp  DatabaseClient.hpp  QuestionDb.hpp  SubjectDb.hpp  TagDb.hpp  TestDb.hpp  UserDb.hpp  UserStatisticsDb.hpp  UserTestProgressDb.hpp
services/cpp_core/include/interceptor/: AuthInterceptor.hpp
services/cpp_core/include/model/dto/: AnswerOptionDto.hpp  HealthDto.hpp  LoginRequestDto.hpp  LoginResponseDto.hpp  QuestionDto.hpp  SaveProgressRequestDto.hpp  SubjectDto.hpp  SubmitTestRequestDto.hpp  TagDto.hpp  TestDto.hpp  TestListDto.hpp  TestProgressDto.hpp  TestResultDto.hpp  UpdateProgressRequestDto.hpp  UserProfileDto.hpp  UserStatisticsDto.hpp
services/cpp_core/include/model/entity/: AnswerOptionEntity.hpp  QuestionEntity.hpp  SubjectEntity.hpp  TagEntity.hpp  TestEntity.hpp  TestHistoryEntity.hpp  TestTagEntity.hpp  UserEntity.hpp  UserStatisticsEntity.hpp  UserTestProgressEntity.hpp
services/cpp_core/include/repository/: AnswerOptionRepository.hpp  IAnswerOptionRepository.hpp  IQuestionRepository.hpp  ISubjectRepository.hpp  ITagRepository.hpp  ITestRepository.hpp  IUserRepository.hpp  IUserStatisticsRepository.hpp  IUserTestProgressRepository.hpp  QuestionRepository.hpp  SubjectRepository.hpp  TagRepository.hpp  TestRepository.hpp  UserRepository.hpp  UserStatisticsRepository.hpp  UserTestProgressRepository.hpp
services/cpp_core/include/service/: AuthService.hpp  CacheService.hpp  ProgressService.hpp  TestService.hpp  UserService.hpp
services/cpp_core/include/utils/: EntityMapper.hpp  JsonUtils.hpp
services/cpp_core/src/config/: AppConfig.cpp
services/cpp_core/src/controller/: AuthController.cpp  HealthController.cpp  TestController.cpp  UserController.cpp
services/cpp_core/src/database/: DatabaseClient.cpp
services/cpp_core/src/interceptor/: AuthInterceptor.cpp
services/cpp_core/src/repository/: AnswerOptionRepository.cpp  QuestionRepository.cpp  SubjectRepository.cpp  TagRepository.cpp  TestRepository.cpp  UserRepository.cpp  UserStatisticsRepository.cpp  UserTestProgressRepository.cpp
services/cpp_core/src/service/: AuthService.cpp  CacheService.cpp  ProgressService.cpp  TestService.cpp  UserService.cpp
services/cpp_core/src/utils/: EntityMapper.cpp  JsonUtils.cpp
